--- a/css/styles.css
+++ b/css/styles.css
@@ -124,9 +124,7 @@ max-width: 1440px;
 background-position: center;
 background-size: cover;
 }
-.container_hero_page {
 
-}
 .hero_title {
         font-family: "Roboto", sans-serif;
         font-weight: 700;
@@ -252,6 +250,7 @@ background-size: cover;
         box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
                 0px 1px 1px rgba(46, 47, 66, 0.16),
                 0px 2px 1px rgba(46, 47, 66, 0.08);
+                transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .our_teams_text {
         font-family: "Roboto", sans-serif;
