--- a/css/styles.css
+++ b/css/styles.css
@@ -321,6 +321,33 @@ background-size: cover;
         width: 360px;
         height: 420px;
 }
+.our_portfolio_itam:hover {
+        box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+                0px 1px 1px rgba(46, 47, 66, 0.16),
+                0px 2px 1px rgba(46, 47, 66, 0.08);
+                transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.our_portfolio_itam:hover .our_portfolio_itam_img_text {
+        transform: translateY(0%);
+}
+
+.our_portfolio_itam_img {
+        position: relative;
+        overflow: hidden;
+}
+.our_portfolio_itam_img_text{
+        position: absolute;
+        top: 0;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        padding: 40px 32px;
+        background-color: #4d5ae5;
+        height: 100%;
+        width: 100%;
+        transform: translateY(100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .our_portfolio_title_itam {
         font-family: "Roboto", sans-serif;
         font-weight: 500;
