--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,10 @@ img {
 /* Header */
 .heder {
         border-bottom: 1px solid #e7e9fc;
+        box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+                0px 1px 1px rgba(46, 47, 66, 0.16),
+                0px 1px 6px rgba(46, 47, 66, 0.08);
+
 }
 
 .header_container {
@@ -59,7 +63,6 @@ img {
 .heder_nav_list {
         display: flex;
         gap: 40px;
-
 }
 .adress_list {
         display: flex;
@@ -97,6 +100,22 @@ img {
         color: #404bbf
 }
 
+.heder_nav_itam:first-child {
+        position: relative;
+        color: #404bbf;
+}
+.heder_nav_itam:first-child::after {
+        content: "" ;
+        position: absolute;
+        border-radius: 2px;
+        width: 48px;
+        height: 4px;
+        background: #404bbf;
+        width: 100%;
+        left: 0;
+        bottom: -1px;
+}
+
 .heder_addres_link {
         font-family: "Roboto", sans-serif;
         font-weight: 400;
@@ -104,6 +123,7 @@ img {
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #434455;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .heder_addres_link:hover {
         color: #404bbf;
@@ -118,11 +138,11 @@ img {
     background-color: #2e2f42;
     padding-top: 188px;
     padding-bottom: 188px;
-background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero_bg.jpg);
-background-repeat: no-repeat;
-max-width: 1440px;
-background-position: center;
-background-size: cover;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero_bg.jpg);
+    background-repeat: no-repeat;
+    max-width: 1440px;
+    background-position: center;
+    background-size: cover;
 }
 
 .hero_title {
