--- a/css/styles.css
+++ b/css/styles.css
@@ -103,8 +103,9 @@ img {
 .studio_nav {
         position: relative;
         color: #404bbf;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.studio_nav ::after {
+.heder_nav_itam ::after {
         content: "" ;
         position: absolute;
         border-radius: 2px;
