--- a/css/styles.css
+++ b/css/styles.css
@@ -417,3 +417,42 @@ img {
         width: 264px;
         height: 72px;
 }
+.container_footer {
+        display: flex;
+        align-items: baseline;
+}
+.container_footer_logo {
+        margin-right: 120px;
+}
+.footer_soc_text {
+        font-weight: 500;
+                font-size: 16px;
+                line-height: 1.5;
+                letter-spacing: 0.02em;
+                color: #fff;
+                margin-bottom: 16px;         
+}
+.footer_soc_list {
+        display: flex;
+        gap: 16px;
+}
+.footer_soc_item {
+        width: 40px;
+        height: 40px;
+}
+.footer_soc_link {
+        width: 100%;
+        height: 100%;
+        background-color: #4d5ae5;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+}
+.footer_soc_link:hover,
+.footer_soc_link:focus {
+        background-color: #31d0aa;
+}
+.footer_soc_svg {
+        fill: #f4f4fd;
+}
